--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h2>I'm a Web Developer</h2>
     <hr />
     <a href="./public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
-    <img src="./assets/images/chetan-movie-ranking.png" height="200" alt="chetan movie ranking"/>
+    <img src="assets/images/chetan-movie-ranking.png" height="200" alt="chetan movie ranking"/>
     <a href="./public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
-    <img src="./assets/images/chetan-birthday-invite.png" height="200" alt="chetan birtday invitation"/>
+    <img src="assets/images/chetan-birthday-invite.png" height="200" alt="chetan birtday invitation"/>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
