--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <h1>Chetan Tippana Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr />
-    <a href="./public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
+    <a href="./movie-ranking.html"><h3>Movie Ranking Project</h3></a>
     <img src="./chetan-movie-ranking.png" height="200" alt="chetan movie ranking"/>
-    <a href="./public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
+    <a href="./birthday-invite.html"><h3>Birthday Invite Project</h3></a>
     <img src="./chetan-birthday-invite.png" height="200" alt="chetan birtday invitation"/>
     <hr />
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <a href="./about.html">About Me</a>
+    <a href="./contact.html">Contact Me</a>
 </body>
 </html>
 
