--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +91 9392556235</p>
+<p>Email: chetantippana@.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Jaggarao bridge,Akkayyapalem<br />
+  Visakhapatnam<br />
+  India<br />
 </p>
